# kiwitcms-tester

./: README.md  TODO.md  pyproject.toml
assets/: template_tcms.conf  upload_test_results_template.sh
kiwitcms_tester/: kiwitcms_tester.py  tester.py
kiwitcms_tester/assets/: conftest.py  upload_test_results_template.sh
