[tool.poetry]
name = "kiwitcms-tester"
version = "0.1.0"
description = ""
authors = ["Sergey Lazarev <lasest1999@gmail.com>"]
readme = "README.md"
packages = [{include = "kiwitcms_tester"}]
include = [
    {path = "assets"}
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
kiwitcms-junit-xml-plugin = "^11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
